--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=codingevents
+spring.datasource.url=jdbc:mariadb://localhost:3306/coding_events
+spring.datasource.username=coding_events_svc
+spring.datasource.password=Learn2code!
+
+#Specify the DBMS...
+
+#Show or not log for each SQL query...
+
+#Hibernate ddl auto (create, create-drop, update)...
+
+#Use spring.jpa.properties.* for Hibernate native properties (the prefix is
+#stripeed before adding them to the entity manager)...
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
