--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,10 @@ spring.datasource.password=Learn2code!
 #Specify the DBMS...
 
 #Show or not log for each SQL query...
+spring.jpa.show-sql = false
 
 #Hibernate ddl auto (create, create-drop, update)...
+spring.jpa.properties.hibernate.hbm2ddl-auto = update
 
 #Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 #stripeed before adding them to the entity manager)...
