--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=Learn2code!
 #Specify the DBMS...
 
 #Show or not log for each SQL query...
-spring.jpa.show-sql = false
+spring.jpa.show-sql = true
 
 #Hibernate ddl auto (create, create-drop, update)...
 spring.jpa.properties.hibernate.hbm2ddl-auto = update
