--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=Learn2code!
 spring.jpa.show-sql = true
 
 #Hibernate ddl auto (create, create-drop, update)...
-spring.jpa.properties.hibernate.hbm2ddl-auto = update
+spring.jpa.properties.hibernate.hbm2ddl.auto = create
 
 #Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 #stripeed before adding them to the entity manager)...
